--- a/oh-my-opencode.jsonc
+++ b/oh-my-opencode.jsonc
@@ -27,10 +27,10 @@
     },
     "momus": {
       "model": "openai/gpt-5.2",
-      "variant": "medium"
+      "variant": "high"
     },
     "atlas": {
-      "model": "azure-anthropic/claude-sonnet-4-5"
+      "model": "azure-anthropic/claude-opus-4-5"
     }
   },
   "categories": {
