Add support for Gotify notifications and update configuration files

--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -4,6 +4,7 @@
     "oh-my-opencode@latest",
     "opencode-wakatime"
   ],
+  "autoupdate": false,
   "provider": {
     "openai": {
       "name": "OpenAI",
