--- a/oh-my-opencode.jsonc
+++ b/oh-my-opencode.jsonc
@@ -1,6 +1,9 @@
 {
   "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
   "agents": {
+    "hephaestus": {
+      "model": "azure-anthropic/claude-opus-4-5"
+    },
     "sisyphus": {
       "model": "azure-anthropic/claude-opus-4-5"
     },
@@ -40,6 +43,9 @@
     "ultrabrain": {
       "model": "openai/gpt-5.2-codex",
       "variant": "xhigh"
+    },
+    "deep": {
+      "model": "azure-anthropic/claude-opus-4-5"
     },
     "artistry": {
       "model": "azure-anthropic/claude-opus-4-5",
