--- a/oh-my-opencode.jsonc
+++ b/oh-my-opencode.jsonc
@@ -2,20 +2,23 @@
   "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
   "agents": {
     "hephaestus": {
-      "model": "azure-anthropic/claude-opus-4-6"
+      "model": "azure-anthropic/claude-opus-4-6",
+      "variant": "max"
     },
     "sisyphus": {
-      "model": "azure-anthropic/claude-opus-4-6"
+      "model": "azure-anthropic/claude-opus-4-6",
+      "variant": "max"
     },
     "oracle": {
       "model": "openai/gpt-5.2",
       "variant": "high"
     },
     "librarian": {
-      "model": "azure-anthropic/claude-sonnet-4-5"
+      "model": "azure-anthropic/claude-sonnet-4-5",
+      "variant": "max"
     },
     "explore": {
-      "model": "openai/gpt-5.2-codex"
+      "model": "openai/gpt-5.3-codex"
     },
     "multimodal-looker": {
       "model": "openai/gpt-5.2"
@@ -33,32 +36,38 @@
       "variant": "high"
     },
     "atlas": {
-      "model": "azure-anthropic/claude-opus-4-6"
+      "model": "azure-anthropic/claude-opus-4-6",
+      "variant": "max"
     }
   },
   "categories": {
     "visual-engineering": {
-      "model": "azure-anthropic/claude-opus-4-6"
+      "model": "azure-anthropic/claude-opus-4-6",
+      "variant": "max"
     },
     "ultrabrain": {
-      "model": "openai/gpt-5.2-codex",
+      "model": "openai/gpt-5.3-codex",
       "variant": "xhigh"
     },
     "deep": {
-      "model": "azure-anthropic/claude-opus-4-6"
+      "model": "azure-anthropic/claude-opus-4-6",
+      "variant": "max"
     },
     "artistry": {
       "model": "azure-anthropic/claude-opus-4-6",
       "variant": "max"
     },
     "quick": {
-      "model": "azure-anthropic/claude-haiku-4-5"
+      "model": "azure-anthropic/claude-haiku-4-5",
+      "variant": "high"
     },
     "unspecified-low": {
-      "model": "azure-anthropic/claude-sonnet-4-5"
+      "model": "azure-anthropic/claude-sonnet-4-5",
+      "variant": "high"
     },
     "unspecified-high": {
-      "model": "azure-anthropic/claude-opus-4-6"
+      "model": "azure-anthropic/claude-opus-4-6",
+      "variant": "max"
     },
     "writing": {
       "model": "openai/gpt-5.2"
