--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -154,7 +154,29 @@
           "name": "GPT-5.3 Codex",
           "tool_call": true,
           "attachment": true,
-          "temperature": true
+          "temperature": true,
+          "variants": {
+            "low": {
+              "reasoningEffort": "low",
+              "reasoningSummary": "auto",
+              "textVerbosity": "medium"
+            },
+            "medium": {
+              "reasoningEffort": "medium",
+              "reasoningSummary": "auto",
+              "textVerbosity": "medium"
+            },
+            "high": {
+              "reasoningEffort": "high",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium"
+            },
+            "xhigh": {
+              "reasoningEffort": "xhigh",
+              "reasoningSummary": "detailed",
+              "textVerbosity": "medium"
+            }
+          }
         },
         "gpt-5-nano": {
           "id": "gpt-5-nano",
