--- a/oh-my-opencode.jsonc
+++ b/oh-my-opencode.jsonc
@@ -3,11 +3,11 @@
   "agents": {
     "sisyphus": {
       "model": "azure-openai/gpt-5.2-codex",
-      "variant": "xhigh"
+      "variant": "high"
     },
     "hephaestus": {
       "model": "azure-openai/gpt-5.2-codex",
-      "variant": "xhigh"
+      "variant": "high"
     },
     "oracle": {
       "model": "azure-openai/gpt-5.2",
@@ -41,7 +41,7 @@
   "categories": {
     "visual-engineering": {
       "model": "azure-openai/gpt-5.2-codex",
-      "variant": "xhigh"
+      "variant": "high"
     },
     "ultrabrain": {
       "model": "azure-openai/gpt-5.2-codex",
