--- a/oh-my-opencode.jsonc
+++ b/oh-my-opencode.jsonc
@@ -2,71 +2,71 @@
   "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
   "agents": {
     "sisyphus": {
-      "model": "azure-openai/gpt-5.2-codex",
-      "variant": "high"
+      "model": "codex/gpt-5.3-codex",
+      "variant": "xhigh"
     },
     "hephaestus": {
-      "model": "azure-openai/gpt-5.2-codex",
-      "variant": "high"
+      "model": "codex/gpt-5.3-codex",
+      "variant": "xhigh"
     },
     "oracle": {
-      "model": "azure-openai/gpt-5.2",
+      "model": "codex/gpt-5.2",
       "variant": "high"
     },
     "librarian": {
-      "model": "azure-openai/gpt-5.2-codex"
+      "model": "codex/gpt-5.3-codex"
     },
     "explore": {
-      "model": "azure-openai/gpt-5.2-codex"
+      "model": "codex/gpt-5.3-codex"
     },
     "multimodal-looker": {
-      "model": "azure-openai/gpt-5.2"
+      "model": "codex/gpt-5.2"
     },
     "prometheus": {
-      "model": "azure-openai/gpt-5.2-codex",
+      "model": "codex/gpt-5.3-codex",
       "variant": "xhigh"
     },
     "metis": {
-      "model": "azure-openai/gpt-5.2-codex",
+      "model": "codex/gpt-5.3-codex",
       "variant": "xhigh"
     },
     "momus": {
-      "model": "azure-openai/gpt-5.2",
+      "model": "codex/gpt-5.2",
       "variant": "medium"
     },
     "atlas": {
-      "model": "azure-openai/gpt-5.2-codex"
+      "model": "codex/gpt-5.3-codex"
     }
   },
   "categories": {
     "visual-engineering": {
-      "model": "azure-openai/gpt-5.2-codex",
+      "model": "codex/gpt-5.3-codex",
       "variant": "high"
     },
     "ultrabrain": {
-      "model": "azure-openai/gpt-5.2-codex",
+      "model": "codex/gpt-5.3-codex",
       "variant": "xhigh"
     },
     "deep": {
-      "model": "azure-openai/gpt-5.2-codex",
+      "model": "codex/gpt-5.3-codex",
       "variant": "xhigh"
     },
     "artistry": {
-      "model": "azure-openai/gpt-5.2-codex",
+      "model": "codex/gpt-5.3-codex",
       "variant": "high"
     },
     "quick": {
-      "model": "azure-openai/gpt-5.2-codex"
+      "model": "codex/gpt-5.3-codex"
     },
     "unspecified-low": {
-      "model": "azure-openai/gpt-5.2-codex"
+      "model": "codex/gpt-5.3-codex"
     },
     "unspecified-high": {
-      "model": "azure-openai/gpt-5.2-codex",
+      "model": "codex/gpt-5.3-codex",
       "variant": "high"
     },
     "writing": {
-      "model": "azure-openai/gpt-5.2-codex"
+      "model": "codex/gpt-5.3-codex"
     }
   },
   "git_master": {
